--- a/edge-analytics-ui/angular.json
+++ b/edge-analytics-ui/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/css/mdsp-css.min.css"
             ],
             "scripts": []
           },
